parser/parser.output
Terminals unused in grammar

    '/'


State 121 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: func_def

    2 func_def: header local_def_list block

    3 local_def_list: ε
    4               | local_def_list local_def

    5 header: "fun" T_id '(' fpar_def semi_fpar_def_list ')' ':' ret_type
    6       | "fun" T_id '(' ')' ':' ret_type

    7 semi_fpar_def_list: ε
    8                   | ';' fpar_def semi_fpar_def_list

    9 fpar_def: "ref" T_id comma_id_list ':' fpar_type
   10         | T_id comma_id_list ':' fpar_type

   11 comma_id_list: ε
   12              | ',' T_id comma_id_list

   13 data_type: "int"
   14          | "char"

   15 bracket_int_const_list: ε
   16                       | '[' T_int_const ']' bracket_int_const_list

   17 ret_type: data_type
   18         | "nothing"

   19 fpar_type: data_type '[' ']' bracket_int_const_list
   20          | data_type bracket_int_const_list

   21 grace_type: data_type bracket_int_const_list

   22 local_def: func_def
   23          | func_decl
   24          | var_def

   25 func_decl: header ';'

   26 var_def: "var" T_id comma_id_list ':' grace_type ';'

   27 stmt: ';'
   28     | l_value "<-" expr ';'
   29     | block
   30     | func_call ';'
   31     | "if" cond "then" stmt
   32     | "if" cond "then" stmt "else" stmt
   33     | "while" cond "do" stmt
   34     | "return" ';'
   35     | "return" expr ';'

   36 block: '{' stmt_list '}'

   37 stmt_list: ε
   38          | stmt stmt_list

   39 func_call: T_id '(' ')'
   40          | T_id '(' expr comma_expr_list ')'

   41 comma_expr_list: ε
   42                | ',' expr comma_expr_list

   43 l_value: T_id
   44        | T_string_literal
   45        | l_value '[' expr ']'

   46 expr: T_int_const
   47     | T_char_const
   48     | l_value
   49     | '(' expr ')'
   50     | func_call
   51     | '+' expr
   52     | '-' expr
   53     | expr '+' expr
   54     | expr '-' expr
   55     | expr '*' expr
   56     | expr "div" expr
   57     | expr "mod" expr

   58 cond: '(' cond ')'
   59     | "not" cond
   60     | cond "and" cond
   61     | cond "or" cond
   62     | expr '=' expr
   63     | expr '#' expr
   64     | expr '<' expr
   65     | expr '>' expr
   66     | expr "<=" expr
   67     | expr ">=" expr


Terminals, with rules where they appear

    $end (0) 0
    '#' (35) 63
    '(' (40) 5 6 39 40 49 58
    ')' (41) 5 6 39 40 49 58
    '*' (42) 55
    '+' (43) 51 53
    ',' (44) 12 42
    '-' (45) 52 54
    '/' (47)
    ':' (58) 5 6 9 10 26
    ';' (59) 8 25 26 27 28 30 34 35
    '<' (60) 64
    '=' (61) 62
    '>' (62) 65
    '[' (91) 16 19 45
    ']' (93) 16 19 45
    '{' (123) 36
    '}' (125) 36
    error (256)
    "and" (258) 60
    "char" (259) 14
    "div" (260) 56
    "do" (261) 33
    "else" (262) 32
    "fun" (263) 5 6
    "if" (264) 31 32
    "int" (265) 13
    "mod" (266) 57
    "not" (267) 59
    "nothing" (268) 18
    "or" (269) 61
    "ref" (270) 9
    "return" (271) 34 35
    "then" (272) 31 32
    "var" (273) 26
    "while" (274) 33
    "<=" (275) 66
    ">=" (276) 67
    "<-" (277) 28
    T_id (278) 5 6 9 10 12 26 39 40 43
    T_int_const (279) 16 46
    T_char_const (280) 47
    T_string_literal (281) 44


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program (45)
        on left: 1
        on right: 0
    func_def (46)
        on left: 2
        on right: 1 22
    local_def_list (47)
        on left: 3 4
        on right: 2 4
    header (48)
        on left: 5 6
        on right: 2 25
    semi_fpar_def_list (49)
        on left: 7 8
        on right: 5 8
    fpar_def (50)
        on left: 9 10
        on right: 5 8
    comma_id_list (51)
        on left: 11 12
        on right: 9 10 12 26
    data_type (52)
        on left: 13 14
        on right: 17 19 20 21
    bracket_int_const_list (53)
        on left: 15 16
        on right: 16 19 20 21
    ret_type (54)
        on left: 17 18
        on right: 5 6
    fpar_type (55)
        on left: 19 20
        on right: 9 10
    grace_type (56)
        on left: 21
        on right: 26
    local_def (57)
        on left: 22 23 24
        on right: 4
    func_decl (58)
        on left: 25
        on right: 23
    var_def (59)
        on left: 26
        on right: 24
    stmt (60)
        on left: 27 28 29 30 31 32 33 34 35
        on right: 31 32 33 38
    block (61)
        on left: 36
        on right: 2 29
    stmt_list (62)
        on left: 37 38
        on right: 36 38
    func_call (63)
        on left: 39 40
        on right: 30 50
    comma_expr_list (64)
        on left: 41 42
        on right: 40 42
    l_value (65)
        on left: 43 44 45
        on right: 28 45 48
    expr (66)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 28 35 40 42 45 49 51 52 53 54 55 56 57 62 63 64 65 66 67
    cond (67)
        on left: 58 59 60 61 62 63 64 65 66 67
        on right: 31 32 33 58 59 60 61


State 0

    0 $accept: • program $end

    "fun"  shift, and go to state 1

    program   go to state 2
    func_def  go to state 3
    header    go to state 4


State 1

    5 header: "fun" • T_id '(' fpar_def semi_fpar_def_list ')' ':' ret_type
    6       | "fun" • T_id '(' ')' ':' ret_type

    T_id  shift, and go to state 5


State 2

    0 $accept: program • $end

    $end  shift, and go to state 6


State 3

    1 program: func_def •

    $default  reduce using rule 1 (program)


State 4

    2 func_def: header • local_def_list block

    $default  reduce using rule 3 (local_def_list)

    local_def_list  go to state 7


State 5

    5 header: "fun" T_id • '(' fpar_def semi_fpar_def_list ')' ':' ret_type
    6       | "fun" T_id • '(' ')' ':' ret_type

    '('  shift, and go to state 8


State 6

    0 $accept: program $end •

    $default  accept


State 7

    2 func_def: header local_def_list • block
    4 local_def_list: local_def_list • local_def

    "fun"  shift, and go to state 1
    "var"  shift, and go to state 9
    '{'    shift, and go to state 10

    func_def   go to state 11
    header     go to state 12
    local_def  go to state 13
    func_decl  go to state 14
    var_def    go to state 15
    block      go to state 16


State 8

    5 header: "fun" T_id '(' • fpar_def semi_fpar_def_list ')' ':' ret_type
    6       | "fun" T_id '(' • ')' ':' ret_type

    "ref"  shift, and go to state 17
    T_id   shift, and go to state 18
    ')'    shift, and go to state 19

    fpar_def  go to state 20


State 9

   26 var_def: "var" • T_id comma_id_list ':' grace_type ';'

    T_id  shift, and go to state 21


State 10

   36 block: '{' • stmt_list '}'

    "if"              shift, and go to state 22
    "return"          shift, and go to state 23
    "while"           shift, and go to state 24
    T_id              shift, and go to state 25
    T_string_literal  shift, and go to state 26
    ';'               shift, and go to state 27
    '{'               shift, and go to state 10

    $default  reduce using rule 37 (stmt_list)

    stmt       go to state 28
    block      go to state 29
    stmt_list  go to state 30
    func_call  go to state 31
    l_value    go to state 32


State 11

   22 local_def: func_def •

    $default  reduce using rule 22 (local_def)


State 12

    2 func_def: header • local_def_list block
   25 func_decl: header • ';'

    ';'  shift, and go to state 33

    $default  reduce using rule 3 (local_def_list)

    local_def_list  go to state 7


State 13

    4 local_def_list: local_def_list local_def •

    $default  reduce using rule 4 (local_def_list)


State 14

   23 local_def: func_decl •

    $default  reduce using rule 23 (local_def)


State 15

   24 local_def: var_def •

    $default  reduce using rule 24 (local_def)


State 16

    2 func_def: header local_def_list block •

    $default  reduce using rule 2 (func_def)


State 17

    9 fpar_def: "ref" • T_id comma_id_list ':' fpar_type

    T_id  shift, and go to state 34


State 18

   10 fpar_def: T_id • comma_id_list ':' fpar_type

    ','  shift, and go to state 35

    $default  reduce using rule 11 (comma_id_list)

    comma_id_list  go to state 36


State 19

    6 header: "fun" T_id '(' ')' • ':' ret_type

    ':'  shift, and go to state 37


State 20

    5 header: "fun" T_id '(' fpar_def • semi_fpar_def_list ')' ':' ret_type

    ';'  shift, and go to state 38

    $default  reduce using rule 7 (semi_fpar_def_list)

    semi_fpar_def_list  go to state 39


State 21

   26 var_def: "var" T_id • comma_id_list ':' grace_type ';'

    ','  shift, and go to state 35

    $default  reduce using rule 11 (comma_id_list)

    comma_id_list  go to state 40


State 22

   31 stmt: "if" • cond "then" stmt
   32     | "if" • cond "then" stmt "else" stmt

    "not"             shift, and go to state 41
    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 46

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 49
    cond       go to state 50


State 23

   34 stmt: "return" • ';'
   35     | "return" • expr ';'

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51
    ';'               shift, and go to state 52

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 53


State 24

   33 stmt: "while" • cond "do" stmt

    "not"             shift, and go to state 41
    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 46

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 49
    cond       go to state 54


State 25

   39 func_call: T_id • '(' ')'
   40          | T_id • '(' expr comma_expr_list ')'
   43 l_value: T_id •

    '('  shift, and go to state 55

    $default  reduce using rule 43 (l_value)


State 26

   44 l_value: T_string_literal •

    $default  reduce using rule 44 (l_value)


State 27

   27 stmt: ';' •

    $default  reduce using rule 27 (stmt)


State 28

   38 stmt_list: stmt • stmt_list

    "if"              shift, and go to state 22
    "return"          shift, and go to state 23
    "while"           shift, and go to state 24
    T_id              shift, and go to state 25
    T_string_literal  shift, and go to state 26
    ';'               shift, and go to state 27
    '{'               shift, and go to state 10

    $default  reduce using rule 37 (stmt_list)

    stmt       go to state 28
    block      go to state 29
    stmt_list  go to state 56
    func_call  go to state 31
    l_value    go to state 32


State 29

   29 stmt: block •

    $default  reduce using rule 29 (stmt)


State 30

   36 block: '{' stmt_list • '}'

    '}'  shift, and go to state 57


State 31

   30 stmt: func_call • ';'

    ';'  shift, and go to state 58


State 32

   28 stmt: l_value • "<-" expr ';'
   45 l_value: l_value • '[' expr ']'

    "<-"  shift, and go to state 59
    '['   shift, and go to state 60


State 33

   25 func_decl: header ';' •

    $default  reduce using rule 25 (func_decl)


State 34

    9 fpar_def: "ref" T_id • comma_id_list ':' fpar_type

    ','  shift, and go to state 35

    $default  reduce using rule 11 (comma_id_list)

    comma_id_list  go to state 61


State 35

   12 comma_id_list: ',' • T_id comma_id_list

    T_id  shift, and go to state 62


State 36

   10 fpar_def: T_id comma_id_list • ':' fpar_type

    ':'  shift, and go to state 63


State 37

    6 header: "fun" T_id '(' ')' ':' • ret_type

    "char"     shift, and go to state 64
    "int"      shift, and go to state 65
    "nothing"  shift, and go to state 66

    data_type  go to state 67
    ret_type   go to state 68


State 38

    8 semi_fpar_def_list: ';' • fpar_def semi_fpar_def_list

    "ref"  shift, and go to state 17
    T_id   shift, and go to state 18

    fpar_def  go to state 69


State 39

    5 header: "fun" T_id '(' fpar_def semi_fpar_def_list • ')' ':' ret_type

    ')'  shift, and go to state 70


State 40

   26 var_def: "var" T_id comma_id_list • ':' grace_type ';'

    ':'  shift, and go to state 71


State 41

   59 cond: "not" • cond

    "not"             shift, and go to state 41
    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 46

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 49
    cond       go to state 72


State 42

   46 expr: T_int_const •

    $default  reduce using rule 46 (expr)


State 43

   47 expr: T_char_const •

    $default  reduce using rule 47 (expr)


State 44

   51 expr: '+' • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 73


State 45

   52 expr: '-' • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 74


State 46

   49 expr: '(' • expr ')'
   58 cond: '(' • cond ')'

    "not"             shift, and go to state 41
    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 46

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 75
    cond       go to state 76


State 47

   50 expr: func_call •

    $default  reduce using rule 50 (expr)


State 48

   45 l_value: l_value • '[' expr ']'
   48 expr: l_value •

    '['  shift, and go to state 60

    $default  reduce using rule 48 (expr)


State 49

   53 expr: expr • '+' expr
   54     | expr • '-' expr
   55     | expr • '*' expr
   56     | expr • "div" expr
   57     | expr • "mod" expr
   62 cond: expr • '=' expr
   63     | expr • '#' expr
   64     | expr • '<' expr
   65     | expr • '>' expr
   66     | expr • "<=" expr
   67     | expr • ">=" expr

    "div"  shift, and go to state 77
    "mod"  shift, and go to state 78
    "<="   shift, and go to state 79
    ">="   shift, and go to state 80
    '*'    shift, and go to state 81
    '+'    shift, and go to state 82
    '-'    shift, and go to state 83
    '='    shift, and go to state 84
    '#'    shift, and go to state 85
    '<'    shift, and go to state 86
    '>'    shift, and go to state 87


State 50

   31 stmt: "if" cond • "then" stmt
   32     | "if" cond • "then" stmt "else" stmt
   60 cond: cond • "and" cond
   61     | cond • "or" cond

    "and"   shift, and go to state 88
    "or"    shift, and go to state 89
    "then"  shift, and go to state 90


State 51

   49 expr: '(' • expr ')'

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 91


State 52

   34 stmt: "return" ';' •

    $default  reduce using rule 34 (stmt)


State 53

   35 stmt: "return" expr • ';'
   53 expr: expr • '+' expr
   54     | expr • '-' expr
   55     | expr • '*' expr
   56     | expr • "div" expr
   57     | expr • "mod" expr

    "div"  shift, and go to state 77
    "mod"  shift, and go to state 78
    '*'    shift, and go to state 81
    '+'    shift, and go to state 82
    '-'    shift, and go to state 83
    ';'    shift, and go to state 92


State 54

   33 stmt: "while" cond • "do" stmt
   60 cond: cond • "and" cond
   61     | cond • "or" cond

    "and"  shift, and go to state 88
    "do"   shift, and go to state 93
    "or"   shift, and go to state 89


State 55

   39 func_call: T_id '(' • ')'
   40          | T_id '(' • expr comma_expr_list ')'

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51
    ')'               shift, and go to state 94

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 95


State 56

   38 stmt_list: stmt stmt_list •

    $default  reduce using rule 38 (stmt_list)


State 57

   36 block: '{' stmt_list '}' •

    $default  reduce using rule 36 (block)


State 58

   30 stmt: func_call ';' •

    $default  reduce using rule 30 (stmt)


State 59

   28 stmt: l_value "<-" • expr ';'

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 96


State 60

   45 l_value: l_value '[' • expr ']'

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 97


State 61

    9 fpar_def: "ref" T_id comma_id_list • ':' fpar_type

    ':'  shift, and go to state 98


State 62

   12 comma_id_list: ',' T_id • comma_id_list

    ','  shift, and go to state 35

    $default  reduce using rule 11 (comma_id_list)

    comma_id_list  go to state 99


State 63

   10 fpar_def: T_id comma_id_list ':' • fpar_type

    "char"  shift, and go to state 64
    "int"   shift, and go to state 65

    data_type  go to state 100
    fpar_type  go to state 101


State 64

   14 data_type: "char" •

    $default  reduce using rule 14 (data_type)


State 65

   13 data_type: "int" •

    $default  reduce using rule 13 (data_type)


State 66

   18 ret_type: "nothing" •

    $default  reduce using rule 18 (ret_type)


State 67

   17 ret_type: data_type •

    $default  reduce using rule 17 (ret_type)


State 68

    6 header: "fun" T_id '(' ')' ':' ret_type •

    $default  reduce using rule 6 (header)


State 69

    8 semi_fpar_def_list: ';' fpar_def • semi_fpar_def_list

    ';'  shift, and go to state 38

    $default  reduce using rule 7 (semi_fpar_def_list)

    semi_fpar_def_list  go to state 102


State 70

    5 header: "fun" T_id '(' fpar_def semi_fpar_def_list ')' • ':' ret_type

    ':'  shift, and go to state 103


State 71

   26 var_def: "var" T_id comma_id_list ':' • grace_type ';'

    "char"  shift, and go to state 64
    "int"   shift, and go to state 65

    data_type   go to state 104
    grace_type  go to state 105


State 72

   59 cond: "not" cond •
   60     | cond • "and" cond
   61     | cond • "or" cond

    $default  reduce using rule 59 (cond)


State 73

   51 expr: '+' expr •
   53     | expr • '+' expr
   54     | expr • '-' expr
   55     | expr • '*' expr
   56     | expr • "div" expr
   57     | expr • "mod" expr

    $default  reduce using rule 51 (expr)


State 74

   52 expr: '-' expr •
   53     | expr • '+' expr
   54     | expr • '-' expr
   55     | expr • '*' expr
   56     | expr • "div" expr
   57     | expr • "mod" expr

    $default  reduce using rule 52 (expr)


State 75

   49 expr: '(' expr • ')'
   53     | expr • '+' expr
   54     | expr • '-' expr
   55     | expr • '*' expr
   56     | expr • "div" expr
   57     | expr • "mod" expr
   62 cond: expr • '=' expr
   63     | expr • '#' expr
   64     | expr • '<' expr
   65     | expr • '>' expr
   66     | expr • "<=" expr
   67     | expr • ">=" expr

    "div"  shift, and go to state 77
    "mod"  shift, and go to state 78
    "<="   shift, and go to state 79
    ">="   shift, and go to state 80
    '*'    shift, and go to state 81
    '+'    shift, and go to state 82
    '-'    shift, and go to state 83
    ')'    shift, and go to state 106
    '='    shift, and go to state 84
    '#'    shift, and go to state 85
    '<'    shift, and go to state 86
    '>'    shift, and go to state 87


State 76

   58 cond: '(' cond • ')'
   60     | cond • "and" cond
   61     | cond • "or" cond

    "and"  shift, and go to state 88
    "or"   shift, and go to state 89
    ')'    shift, and go to state 107


State 77

   56 expr: expr "div" • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 108


State 78

   57 expr: expr "mod" • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 109


State 79

   66 cond: expr "<=" • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 110


State 80

   67 cond: expr ">=" • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 111


State 81

   55 expr: expr '*' • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 112


State 82

   53 expr: expr '+' • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 113


State 83

   54 expr: expr '-' • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 114


State 84

   62 cond: expr '=' • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 115


State 85

   63 cond: expr '#' • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 116


State 86

   64 cond: expr '<' • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 117


State 87

   65 cond: expr '>' • expr

    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 51

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 118


State 88

   60 cond: cond "and" • cond

    "not"             shift, and go to state 41
    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 46

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 49
    cond       go to state 119


State 89

   61 cond: cond "or" • cond

    "not"             shift, and go to state 41
    T_id              shift, and go to state 25
    T_int_const       shift, and go to state 42
    T_char_const      shift, and go to state 43
    T_string_literal  shift, and go to state 26
    '+'               shift, and go to state 44
    '-'               shift, and go to state 45
    '('               shift, and go to state 46

    func_call  go to state 47
    l_value    go to state 48
    expr       go to state 49
    cond       go to state 120


State 90

   31 stmt: "if" cond "then" • stmt
   32     | "if" cond "then" • stmt "else" stmt

    "if"              shift, and go to state 22
    "return"          shift, and go to state 23
    "while"           shift, and go to state 24
    T_id              shift, and go to state 25
    T_string_literal  shift, and go to state 26
    ';'               shift, and go to state 27
    '{'               shift, and go to state 10

    stmt       go to state 121
    block      go to state 29
    func_call  go to state 31
    l_value    go to state 32


State 91

   49 expr: '(' expr • ')'
   53     | expr • '+' expr
   54     | expr • '-' expr
   55     | expr • '*' expr
   56     | expr • "div" expr
   57     | expr • "mod" expr

    "div"  shift, and go to state 77
    "mod"  shift, and go to state 78
    '*'    shift, and go to state 81
    '+'    shift, and go to state 82
    '-'    shift, and go to state 83
    ')'    shift, and go to state 106


State 92

   35 stmt: "return" expr ';' •

    $default  reduce using rule 35 (stmt)


State 93

   33 stmt: "while" cond "do" • stmt

    "if"              shift, and go to state 22
    "return"          shift, and go to state 23
    "while"           shift, and go to state 24
    T_id              shift, and go to state 25
    T_string_literal  shift, and go to state 26
    ';'               shift, and go to state 27
    '{'               shift, and go to state 10

    stmt       go to state 122
    block      go to state 29
    func_call  go to state 31
    l_value    go to state 32


State 94

   39 func_call: T_id '(' ')' •

    $default  reduce using rule 39 (func_call)


State 95

   40 func_call: T_id '(' expr • comma_expr_list ')'
   53 expr: expr • '+' expr
   54     | expr • '-' expr
   55     | expr • '*' expr
   56     | expr • "div" expr
   57     | expr • "mod" expr

    "div"  shift, and go to state 77
    "mod"  shift, and go to state 78
    '*'    shift, and go to state 81
    '+'    shift, and go to state 82
    '-'    shift, and go to state 83
    ','    shift, and go to state 123

    $default  reduce using rule 41 (comma_expr_list)

    comma_expr_list  go to state 124


State 96

   28 stmt: l_value "<-" expr • ';'
   53 expr: expr • '+' expr
   54     | expr • '-' expr
   55     | expr • '*' expr
   56     | expr • "div" expr
   57     | expr • "mod" expr

    "div"  shift, and go to state 77
    "mod"  shift, and go to state 78
    '*'    shift, and go to state 81
    '+'    shift, and go to state 82
    '-'    shift, and go to state 83
    ';'    shift, and go to state 125


State 97

   45 l_value: l_value '[' expr • ']'
   53 expr: expr • '+' expr
   54     | expr • '-' expr
   55     | expr • '*' expr
   56     | expr • "div" expr
   57     | expr • "mod" expr

    "div"  shift, and go to state 77
    "mod"  shift, and go to state 78
    '*'    shift, and go to state 81
    '+'    shift, and go to state 82
    '-'    shift, and go to state 83
    ']'    shift, and go to state 126


State 98

    9 fpar_def: "ref" T_id comma_id_list ':' • fpar_type

    "char"  shift, and go to state 64
    "int"   shift, and go to state 65

    data_type  go to state 100
    fpar_type  go to state 127


State 99

   12 comma_id_list: ',' T_id comma_id_list •

    $default  reduce using rule 12 (comma_id_list)


State 100

   19 fpar_type: data_type • '[' ']' bracket_int_const_list
   20          | data_type • bracket_int_const_list

    '['  shift, and go to state 128

    $default  reduce using rule 15 (bracket_int_const_list)
